--- a/Kanbo.xcodeproj/xcshareddata/xcschemes/Kanbo.xcscheme
+++ b/Kanbo.xcodeproj/xcshareddata/xcschemes/Kanbo.xcscheme
@@ -49,6 +49,12 @@
             ReferencedContainer = "container:Kanbo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-hasLaunched false"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
